# crawldown

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: PLAN.md  ROADMAP.md
docs/dev/: GUIDE.md
examples/: basic_crawl.py  crawl_recime.py  with_options.py
src/crawldown/: __init__.py  cli.py  crawler.py  extractor.py  models.py  writer.py
tests/: test_cli.py  test_extractor.py  test_models.py  test_robustness.py  test_writer.py
