[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawldown"
version = "0.1.2"
description = "Crawl any website and save every page as organized Markdown files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "danilotpnta", email = "falammal@gmail.com" }]
keywords = ["web scraping", "crawling", "markdown", "documentation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "crawl4ai>=0.8.6",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
crawldown = "crawldown.cli:app"

[project.urls]
Homepage = "https://github.com/danilotpnta/crawldown"
Issues = "https://github.com/danilotpnta/crawldown/issues"
Changelog = "https://github.com/danilotpnta/crawldown/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/crawldown"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
